--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@ Cargo.lock
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Cloudflare Workers
+node_modules/
+.wrangler/
+wrangler.toml
+.dev.vars
